2005-09-24  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* src/mainframe.h
	src/view/telnetview.cpp
	src/mainframe.cpp
	po/pcmanx.pot
	po/zh_TW.po
	: Add update BBS list mechanism.

2005-09-22  Jim Huang  <jserv@kaffe.org>

	* configure.ac: Clean up redundant GTK+ checking.

2005-09-19  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* pcmanx-pure-gtk2.spec.in : Modify string from "Copyright" to "License".

2005-08-28  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/core/termdata.cpp:
	(CTermData::PutChar): Fix incorrect parsing of ANSI control characters.

2005-08-28  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/core/termdata.cpp:
	(CTermData::ScrollUp): Fix a problem with screen scrolling.
	(CTermData::ParseAnsiEscapeSequence): Implement ESC 7 and ESC 8.

2005-08-28  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/nancy_bot/msgdata.cpp:
	(MsgData::getCommonMsg): Temporary workaround to fix the SIGFPE caused
	by division by zero.

2005-08-27  Chia I Wu  <b90201047@ntu.edu.tw>

	* src/core/font.cpp (CFont::RecalculateMetrics):
	Recalculate metrics only when face is scalable. Reported by
	wilkins@ptt.

2005-08-25  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/mainframe.cpp,
	po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po: Little fix.

2005-08-25  Youchen Lee  <youchen.lee@gmail.com>

	* src/mainframe.cpp,
	po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po: Added zh_CN translator Optical-dlz.

2005-08-25  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* configure.ac:
	Temporarily disable --enable-script option in the configure script.
	Bump release version to 0.3.2.

2005-08-23  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/script/script.cpp:
	Change char* parameters to const char* since these strings are not 
	modified in these functions.

2005-08-23  Youchen Lee  <youchen.lee@gmail.com>
	
	* src/nancy_bot/nancybot.cpp: Fixed an unexpected semicolon in
	NancyBot::askNancy().

2005-08-23  Youchen Lee  <youchen.lee@gmail.com>
